--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <div class="card text-center">
-      <img class="img-circle" src="../image/maxime.png" alt="Maxime">
+      <img class="img-circle" src="image/maxime.png" alt="Maxime">
       <h1>Maxime Le Maître</h1>
       <h2>Fullstack Developer @LeWagon</h2>
       <p class="description">
@@ -35,12 +35,12 @@
       <h2>My hobbies and interests</h2>
       <ul class="card-list">
         <li>
-          <img src="/image/Basket1.jpg" alt="Basket"><h3>Basket-ball</h3><p>Best sport ever</p>
+          <img src="image/Basket1.jpg" alt="Basket"><h3>Basket-ball</h3><p>Best sport ever</p>
         <li>
-          <img src="/image/trip.jpg" alt="Travel"><h3>Travel</h3><p>I love to travel around the world</p>
+          <img src="image/trip.jpg" alt="Travel"><h3>Travel</h3><p>I love to travel around the world</p>
         </li>
         <li>
-          <img width= auto src="/image/newtechno.jpg" alt="Technologies"><h3>New Technologies</h3><p>Passionate about innovation & new technologies</p>
+          <img width= auto src="image/newtechno.jpg" alt="Technologies"><h3>New Technologies</h3><p>Passionate about innovation & new technologies</p>
         </li>
       </ul>
     </div>
