--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 
     <!-- Fontawesome -->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Your style -->
     <link rel="stylesheet" href="style.css">
@@ -36,7 +36,7 @@
     <div id="page-content">
       <div class="container">
         <div class="card text-center" id="summary">
-          <img class="img-circle" src="../image/maxime.png" alt="Maxime">
+          <img class="img-circle" src="image/maxime.png" alt="Maxime">
           <h1>Maxime Le Maître</h1>
           <h2>Fullstack Developer @LeWagon</h2>
           <p class="description">
