--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Basic info</title>
+    <title>Hello you!</title>
 
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400,700" rel="stylesheet">
@@ -42,7 +42,7 @@
           <p class="description">
             After a first entrepreneurship experience, I've applied to Le Wagon.
           </p>
-          <a class="btn-red" href="http://m.me/lemaitremaxime">Let's talk!</a>
+          <a class="btn-red" href="http://m.me/lemaitremaxime" target="_blank">Let's talk!</a>
         </div>
         <div class="card text-center" >
           <ul class="card-list list-inline">
